Fix sizing and spacing of elements and add Coves font

--- a/src/components/project-card/project-card.styles.scss
+++ b/src/components/project-card/project-card.styles.scss
@@ -8,7 +8,7 @@
     .content {
         display: flex;
         justify-content: space-between;
-        width: 70%;
+        width: 75%;
 
         .project-info {
             width: 50%;
@@ -21,12 +21,15 @@
             }
     
             .project-description {
-                font-size: 2.5rem;
+                font-family: 'Coves';
+                font-size: 3rem;
                 align-self: flex-end;
+                margin: 3rem 6rem 3rem auto;
             }
     
             .project-tech {
-                font-size: 2rem;
+                font-family: 'Coves';
+                font-size: 2.5rem;
 
                 & span {
                     color: #42568f;
@@ -38,6 +41,7 @@
             height: 75vh;
             transform: perspective(102rem) rotateX(2deg) rotate(2deg) rotateY(-14deg);
             box-shadow: 1rem 0 1rem rgba(black, .3);
+            align-self: center;
         }
     }
 }
@@ -47,6 +51,14 @@
 }
 
 :root {
+    @media screen and (max-width: 1100px) {
+        .project-card {
+            
+            .project-img {
+            }
+        }
+    }
+
     @media screen and (max-width: 900px) {
         .project-card {
 
@@ -73,41 +85,50 @@
             }
         }
     }
+
+    // @media screen and (max-width: 630px) {
+    //     .project-card {
+            
+    //         .project-img {
+    //             height: 55vh;
+    //         }
+    //     }
+    // }
     
     @media screen and (max-width: 600px) {
-        .project-card {
-    
+        .project-card {        
+
             .content {
                 width: 92%;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-            }
-        
-            .project-info {
-                width: 100%;
-                align-items: center;
-            }
-        
-            .project-title {
-                font-size: 2.5rem;
-                margin-bottom: 3rem;
-            }
+
+                .project-info {
+                    width: 100%;
+                    align-items: center;
+
+                    .project-title {
+                        font-size: 2.5rem;
+                        margin-bottom: 3rem;
+                    }
             
-            .project-description {
-                font-size: 1.6rem;
-                text-align: center;
-                margin-bottom: 3rem;
-            }
-            
-            .project-tech {
-                font-size: 1.4rem;
-                text-align: center;
-                margin-bottom: 3rem;
-            }
-            
-            .project-img {
-                height: 60vh;
+                    .project-description {
+                        font-size: 1.6rem;
+                        text-align: center;
+                        margin: 0 0 3rem 0;
+                    }
+
+                    .project-tech {
+                        font-size: 1.4rem;
+                        text-align: center;
+                        margin-bottom: 3rem;
+                    }
+                }
+
+                .project-img {
+                    height: 60vh;
+                }
             }
         }
     }
